<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_regist_senha.RecuperarFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="@dimen/guidelines_dimens"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/guidelines_dimens"
        android:layout_marginLeft="@dimen/guidelines_dimens"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guidelines_dimens"
        android:layout_marginRight="@dimen/guidelines_dimens"
        android:layout_marginEnd="@dimen/guidelines_dimens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtRecuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_palavra_passe"
        android:textSize="@dimen/text_title_size"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:gravity="center"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>

    <TextView
        android:id="@+id/txtPlease"
        android:text="@string/por_favor_inserir_telefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginLeft="@dimen/guidelines_dimens"
        android:layout_marginRight="@dimen/guidelines_dimens"
        app:layout_constraintTop_toBottomOf="@+id/txtRecuperar"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/text_blue_dark_color"/>

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_de_telefone_dots"
        android:textSize="@dimen/text_normal_size"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:textColor="@color/orange"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@+id/txtPlease"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"/>


    <LinearLayout
        android:id="@+id/linearPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        android:background="@drawable/edit_box_rectangle"
        android:padding="5dp"
        android:weightSum="1"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTelefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange_light"
            android:hint="@string/user_phone_hint"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:inputType="phone"
            android:fontFamily="@font/poppins_medium"
            />

        <TextView
            android:text="@string/numero_de_telefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/text_blue_dark_color"
            />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btnOK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:background="@drawable/button_bkg"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@+id/linearPhone"
        app:layout_constraintStart_toEndOf="@+id/guideline_left"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        />

</androidx.constraintlayout.widget.ConstraintLayout>