<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background_color"
    tools:context=".login_regist_senha.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="36dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="@dimen/guidelines_dimens"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/guidelines_dimens"
                android:layout_marginLeft="@dimen/guidelines_dimens"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/guidelines_dimens"
                android:layout_marginRight="@dimen/guidelines_dimens"
                android:layout_marginEnd="@dimen/guidelines_dimens"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txtEmailPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_ou_telefone_dots"
                android:textSize="@dimen/text_normal_size"
                android:layout_marginTop="50dp"
                android:padding="5dp"
                android:textColor="@color/orange"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"/>


            <LinearLayout
                android:id="@+id/linearEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtEmailPhone"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                android:background="@drawable/edit_box_rectangle"
                android:padding="5dp"
                android:weightSum="1"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editEmailPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:textColor="@color/orange"
                    android:textColorHint="@color/orange_light"
                    android:hint="@string/user_email_hint"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/poppins_medium"

                    />

                <TextView
                    android:text="@string/email_ou_telefone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:layout_marginRight="8dp"
                    android:gravity="right|end"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/text_blue_dark_color"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palavra_passe_dots"
                android:textSize="@dimen/text_normal_size"
                android:layout_marginTop="26dp"
                android:padding="5dp"
                android:textColor="@color/orange"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toBottomOf="@+id/linearEmail"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"/>


            <LinearLayout
                android:id="@+id/linearPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                android:background="@drawable/edit_box_rectangle"
                android:padding="5dp"
                android:weightSum="1"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:textColor="@color/orange"
                    android:textColorHint="@color/orange_light"
                    android:hint="@string/user_pass_hint"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_medium"
                    />

                <TextView
                    android:text="@string/palavra_passe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:layout_marginRight="8dp"
                    android:gravity="right|end"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/text_blue_dark_color"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/txtForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esqueceu_a_palavra_passe"
                android:textSize="@dimen/text_normal_size"
                android:layout_marginTop="18dp"
                android:padding="5dp"
                android:textColor="@color/text_blue_normal_color"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toBottomOf="@+id/linearPass"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                />

            <android.widget.Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/cadastro_tab_login"
                android:textColor="@color/white"
                android:background="@drawable/button_bkg"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintTop_toBottomOf="@+id/txtForgetPass"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/txtOU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OU"
                android:textSize="@dimen/text_normal_size"
                android:layout_marginTop="@dimen/guidelines_dimens"
                android:padding="5dp"
                android:textColor="@color/text_blue_normal_color"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                />

            <android.widget.Button
                android:id="@+id/btnFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guidelines_dimens"
                android:text="@string/facebook"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:background="@drawable/button_bkg"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintTop_toBottomOf="@+id/txtOU"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                />

            <android.widget.Button
                android:id="@+id/btnGmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guidelines_dimens"
                android:text="@string/gmail"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:background="@drawable/button_bkg"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                />

            <TextView
                android:id="@+id/txtRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nao_tem_conta_registrar"
                android:textSize="@dimen/text_normal_size"
                android:layout_marginTop="32dp"
                android:padding="5dp"
                android:textColor="@color/text_blue_normal_color"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintTop_toBottomOf="@+id/btnGmail"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>