<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="8dp"
    app:cardCornerRadius="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">




        <TextView
            android:id="@+id/txtConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/digite_codigo_confirmacao_dots"
            android:textSize="@dimen/text_normal_size"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:textColor="@color/orange"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintTop_toBottomOf="@+id/linearNewPass"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"/>

        <LinearLayout
            android:id="@+id/linearConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_box_rectangle"
            android:padding="5dp"
            android:weightSum="1"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange_light"
                android:hint="@string/user_pass_hint"
                android:textSize="14sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins_medium"
                />

            <TextView
                android:text="@string/digite_codigo_confirmacao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/text_blue_dark_color"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:inputType="text"
                    android:maxLength="9"
                    android:padding="15dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <android.widget.Button
                android:id="@+id/dialog_btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:text="@string/confirmar"
                android:textColor="@color/white"
                android:background="@drawable/button_bkg"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:fontFamily="@font/poppins_regular"
                />

            <TextView
                android:id="@+id/dialog_txt_sendCode"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/reenviar_o_codigo"
                android:textColor="@color/text_blue_normal_color"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:fontFamily="@font/poppins_regular"

                />
        </LinearLayout>
    </LinearLayout>
    <!--     <include layout="@layout/activity_sem_internet" /> -->
</androidx.cardview.widget.CardView>