<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="8dp"
    app:cardCornerRadius="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tint="@color/search_img_bkg_color"
            android:src="@drawable/ic_success"
            />

        <TextView
            android:id="@+id/txtConfirmTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/text_title_cardgrid_color"
            android:text="@string/obrigado"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/poppins_regular"
            />
        <TextView
            android:id="@+id/txtConfirmMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/text_blue_dark_color"
            android:text="@string/msg_pedido_sendo_processado"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_regular"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:inputType="text"
                    android:maxLength="9"
                    android:padding="15dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <android.widget.Button
                android:id="@+id/dialog_btn_gotoMap"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_margin="5dp"
                android:text="@string/controlar_seu_pedido"
                android:textColor="@color/white"
                android:background="@drawable/button_bkg"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:fontFamily="@font/poppins_regular"
                />

            <android.widget.Button
                android:id="@+id/dialog_btn_gotoHome"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/button_bkg"
                android:text="@string/voltar_ao_inicio"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:fontFamily="@font/poppins_regular"

                />
        </LinearLayout>
    </LinearLayout>
    <!--     <include layout="@layout/activity_sem_internet" /> -->
</androidx.cardview.widget.CardView>